# colornaming

./: .gitignore  README.md  pyproject.toml
colornaming/: __init__.py  colornaming.py  converter.py  hlc.py  img.py  kobayashi.py  mood.py  palette.py  qcd.py
colornaming/data/: datos colores kobayashi.csv
colornaming/kobayashi/: colors.py  moods.py
colornaming/kobayashi/data/: datos colores kobayashi - Combinations.csv  datos colores kobayashi.csv
notebooks/: colorlovers.ipynb  top_colors.ipynb
qcolor/: __init__.py  qcolor.py
samples/: test_quantize.py
tests/: base_colors.py  hlc_test.py  prl15_colors.py  qcd_test.py  qcolor_test.py  rgb_hlc.py  rgb_hlc360.py
tools/: palette.py
